fix overflow on economy section

--- a/index.scss
+++ b/index.scss
@@ -155,6 +155,7 @@ section {
   min-height: 0;
   height: 19.5rem;
   left: 29.5%;
+  overflow: auto;
   position: absolute;
   top: 20.5rem;
 }
